fixed bg overlap on high resolution screens

--- a/src/components/css/bg-component.module.css
+++ b/src/components/css/bg-component.module.css
@@ -4,6 +4,7 @@
     background-size: contain;
     height: 100%; 
     background-repeat: repeat-y;
+    overflow:hidden;
 }
 
 @media screen and (max-width: 768px) {
